--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <img :src="carouselImages[currentActiveImage]" alt="carousel">
                 </div>
 
-                <div class="arrow" @click="nextPhoto()">
+                <div class="arrow" @click="nextPhoto">
                     <i class="fas fa-chevron-right"></i>
                 </div>
             </div>
